# mimir

./: .gitignore  AGENTS.md  README.md  skills-lock.json
.github/workflows/: deploy-vultr.yml
brim/data/: dummy_data.csv
mimir/: .dockerignore  PLAN.md  README.md  package.json  turbo.json
mimir/docs/: HYPOTHESIS_LOG.md  IMPLEMENTATION_PLAN.md  VALSOFT_PRD.md
mimir/scripts/: docker-entrypoint.sh
mimir/src/mimir-fraud/: Dockerfile  README.md  pyproject.toml
mimir/src/mimir-fraud/src/mimir/: __init__.py  cli.py  engine.py
mimir/src/mimir-fraud/src/mimir/api/: __init__.py  main.py  routes_review.py  routes_synthetic.py  routes_transactions.py
mimir/src/mimir-fraud/src/mimir/context/: __init__.py  entity_context.py
mimir/src/mimir-fraud/src/mimir/core/: __init__.py  constants.py  schemas.py
mimir/src/mimir-fraud/src/mimir/data/: load_transactions.py  validate_transactions.py
mimir/src/mimir-fraud/src/mimir/export/: export_csv.py
mimir/src/mimir-fraud/src/mimir/features/: card_baselines.py  categorical_surprisal.py  feature_pipeline.py  graph_collective.py  model_consensus.py  xfraud_graph.py
mimir/src/mimir-fraud/src/mimir/primitives/: __init__.py  rust_backed.py
mimir/src/mimir-fraud/src/mimir/review/: __init__.py  audit_log.py  feedback.py  review_state.py  training_status.py
mimir/src/mimir-fraud/src/mimir/scoring/: __init__.py  reason_engine.py  score_engine.py  thresholds.py
mimir/src/mimir-fraud/tests/: test_detector.py
ref/Prompt_Engineers-main/: COMMIT_LOG.md  PROJECT_RULES.md  README.md  package-lock.json  package.json
(+199 files in other folders)
