[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir-fraud"
version = "0.1.0"
description = "Valsoft-first fraud and risk engine for Mimir transaction intelligence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "polars>=1.0",
  "pydantic>=2.0",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mimir = "mimir.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
